--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
+body{
   text-align: center;
+  font-family:cursive;
+  font-size: 1.2rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button{
+  text-align: center;
+  width: 120px;
+  height: 50px;
+  border: 2px solid black;
+  border-radius: 20px;
+  box-shadow: 2px 2px 4px;
+  font-size: 1.2rem;
+  margin: 1%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+table{
+  margin: 0 auto;
+  margin-top: 3%;
+}
+td{
+  border: 1px solid black;
+  width: 120px;
+  height: 120px;
+  border-radius: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
